fix: заменил ArrayList на LinkedList в browsingHistory