@@ -4,17 +4,18 @@ import Interfaces.HistoryManager;
 import Tasks.Task;
 
 import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> browsingHistory = new ArrayList<>();
+    private final LinkedList<Task> browsingHistory = new LinkedList<>();
 
     @Override
     public void add(Task task) { // наполнение истории
         int historySize = 10;
-        browsingHistory.add(task);
+        browsingHistory.addLast(task);
         if (browsingHistory.size() > historySize) {
-            browsingHistory.remove(0); // записей > 10 => удаляем 1-й элемент
+            browsingHistory.removeFirst(); // записей > 10 => удаляем 1-й элемент
         }
     }
 
